# hot-box

./: .gitignore  README.md
hardware/: README.md  api.py  blink.py  datetime.py  file.py  main.py  secrets.py.example  sensors.py  util.py  wifi.py
hot-boxed-pie/: README.md  database.js  database.sqlite  db.js  ecosystem.config.cjs  nodemon.json  package-lock.json  package.json  server.js
hot-boxed-pie/client/: index.html  index.js
hot-boxed-pie/middleware/: boxExists.js
hot-boxed-pie/msgs/: measurementMsgs.js
hot-boxed-pie/routes/: boxRoutes.js  boxes.js  measurementRoutes.js  measurements.js  sensorRoutes.js  sensors.js
hot-boxed-pie/scripts/: add-measurement.sh  deploy.sh  random-measurement-data.sh  setup-test-data.sh  simple-measurement-data.sh
hot-boxed-pie/utils/: boxes.js  measurements.js  sensors.js
pie-filling/: README.md  blink.py
termodyn/: README.md  main.py  pyproject.toml
termodyn/c/: pyproject.toml
termodyn/c/src/: main.cpp
termodyn/c/src/c/: __init__.py
termodyn/rs/: Cargo.toml  pyproject.toml
termodyn/rs/src/: lib.rs
termodyn/rs/src/rs/: __init__.py
termodyn/termofem/: README.md  pyproject.toml
termodyn/termofem/src/termofem/: HeatExchanger.eps  Lshape.eps  MovedMesh.eps  Th.msh  Thwithhole.eps  Thwithouthole.eps  TouchSide.esp  __init__.py  capacitor.msh  capacitor3d_potential.txt  capacitor3d_vh.txt  capacitor_field.txt  capacitor_potential.txt  capacitor_vh.txt  emptymesh.msh  heatexb.eps  matlab_octave_2d_examples.edp  matlab_octave_2d_examples.m  matlab_octave_3d_examples.m  membrane.eps  membraneTh.eps  mycode0.edp  mycode1.edp  mycode2.edp  mycode3.edp  mycode4.edp  mycode98.edp  mycode99.edp  mycode_3d_adaptation.edp  mycode_adaptmesh.edp  mycode_adaptmesh1.edp  mycode_adaptmesh2.edp  mycode_broken.edp  mycode_buildmesh.edp  mycode_cavity.edp  mycode_falling_sphere.edp  mycode_gplot.edp  mycode_heat_exchange.edp  mycode_matlib.edp  mycode_medit.edp  (+21 more)
termodyn/termopy/: pyproject.toml
termodyn/termopy/src/termopy/: HeatTransferSimulation.py  __init__.py
