[project]
name = "termodyn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mpich>=4.3.2",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyvista>=0.46.4",
    "scipy>=1.16.3",
    "xlrd>=2.0.2",
]
