[project]
name = "rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivan Djordjevic", email = "idjordje@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rs = "rs:main"

[tool.maturin]
module-name = "rs._core"
python-packages = ["rs"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
