[project]
name = "termopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivan Djordjevic", email = "idjordje@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
termopy = "termopy:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
